--- a/Website/styles.css
+++ b/Website/styles.css
@@ -9,7 +9,7 @@ body {
 
 header {
     background-color: #333;
-    color: #ffffff;
+    color: #cccccc;
     padding: 10px 0;
 }
 
@@ -33,6 +33,11 @@ nav ul li a {
     text-decoration: none;
 }
 
+nav ul li a:hover {
+    color: #cccccc;
+}
+
+
 
 
 
@@ -47,46 +52,113 @@ main {
 
 
 
+
+
+
+/* Styles für das Suchformular */
+form {
+    margin-bottom: 20px;
+}
+
+form input[type="text"] {
+    padding: 5px;
+    width: 300px;
+}
+
+form input[type="submit"] {
+    padding: 5px 10px;
+    margin-left: 10px;
+}
+
+
+
+
+
+
+
+
+
 .book-gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 1000px;
 }
 
 .book-item {
-    flex-basis: 25%;
-    position: relative;
-    margin: 1%;
+    display: inline-block;
+    vertical-align: top;
+    width: calc(25% - 20px);
+    margin: 20px 10px 20px 10px;
     box-sizing: border-box;
-}
-
-.book-details {
-    visibility: hidden;
-    position: absolute;
+    position: relative;
     background-color: #fff;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.5);
+    transition: 0.3s;
+    font-family: 'Arial', sans-serif;
 }
 
-.book-item:hover .book-details {
-    visibility: visible;
-}
-
-.book-item h2 {
-    font-size: 1.5em;
-    color: #333;
-}
-
-.book-item p {
-    color: #666;
+@media screen and (max-width: 600px) {
+    .book-item {
+        width: 100%;
+    }
 }
 
 .book-item img {
     width: 100%;
     height: auto;
     object-fit: cover;
+    animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+.book-details {
+    visibility: hidden;
+    position: absolute;
+    bottom: 14%;
+    right: 3%;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0.5em 0.5em 2em 0.6em rgba(0, 0, 0, 0.6);
+    font-family: 'Arial', sans-serif;
+    animation: fadeout 0.2s;
+    transition: visibility 0.2s;
+}
+
+.book-details p {
+    color: #666;
+    font-size: 0.9em;
+}
+
+.book-item:hover .book-details {
+    visibility: visible;
+    animation: fadein 0.5s;
+}
+
+
+.book-item h2 {
+    font-size: 1.2em;
+    color: #333;
+    font-weight: bold;
+}
+
+
+.book-item p {
+    color: #666;
+    font-size: 0.9em;
 }
 
 
@@ -94,6 +166,12 @@ main {
 
 
 
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
 
 
@@ -111,7 +189,6 @@ main {
     background-color: #e9e9e9;
 }
 
-
 .page-arrow {
     display: inline-block;
     margin: 0 5px;
@@ -126,27 +203,19 @@ main {
     background-color: #666;
 }
 
-
 .current-page {
     background-color: #333;
     color: #ffffff;
 }
 
-
-
-
-
-
 footer {
     position: relative;
     width: 100%;
     background-color: #333;
-    color: #ffffff;
+    color: #cccccc;
     text-align: center;
     padding: 10px 0;
 }
-
-
 
 .footer-content p {
     margin: 0;
