--- a/Website/styles.css
+++ b/Website/styles.css
@@ -56,7 +56,7 @@ main {
 
 
 
-/* Styles für das Suchformular */
+/* Styles für formular */
 form {
     margin-bottom: 20px;
 }
@@ -88,7 +88,7 @@ form input[type="submit"] {
 .book-item {
     display: inline-block;
     vertical-align: top;
-    width: calc(25% - 20px);
+    width: calc(16.66% - 20px);
     margin: 20px 10px 20px 10px;
     box-sizing: border-box;
     position: relative;
@@ -101,9 +101,33 @@ form input[type="submit"] {
     font-family: 'Arial', sans-serif;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1500px) {
     .book-item {
-        width: 100%;
+        width: calc(20% - 20px);
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .book-item {
+        width: calc(25% - 20px);
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .book-item {
+        width: calc(33.33% - 20px);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .book-item {
+        width: calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .book-item {
+        width: calc(100% - 20px);
     }
 }
 
@@ -129,7 +153,7 @@ form input[type="submit"] {
     position: absolute;
     bottom: 14%;
     right: 3%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
